finished writing code for download of data and analysis. Created notebook with an example analysis and its visualization. Changed readme Remaining issues: Come up with a more performant algorithm and try to find a more versatile data api than alpha vantage

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,4 @@
-data/sql/data_detailed.data
-download/*
-output/*
-data/raw/*
-data/temp/*
+# output/*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
